--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "normalize-scss": "^7.0.1",
     "parallax-js": "^3.1.0",
-    "scroll-parallax": "^2.1.0"
+    "scroll-parallax": "^2.1.0",
+    "vanilla-modal": "^1.6.5"
   }
 }
