--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "rimraf": "^2.6.1"
   },
   "dependencies": {
+    "headroom.js": "^0.9.4",
     "normalize-scss": "^7.0.1",
     "parallax-js": "^3.1.0",
     "scroll-parallax": "^2.1.0",
